<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!--Copyright (c) 2023 Boston Dynamics AI Institute LLC. All rights reserved.-->
<package format="3">
  <name>cppflow_msgs</name>
  <version>0.0.0</version>
  <description>Common ROS messages package for `bdai_ros`.</description>
  <maintainer email="engineering@theaiinstitute.com">BD AI Institute</maintainer>
  <license>TODO: License declaration</license>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
